# STM-Sensors

./: .cproject  .gitignore  README.md  STM Sensors Debug.launch  STM Sensors.ioc
Core/Inc/algoMorseH/: convertionMorse.h
Core/Src/: main.c
Core/Src/algoMorseC/: convertionMorse.c
src/: .cproject  .project  CMakeLists.txt  STM Sensors Debug.launch  STM Sensors.ioc
src/Core/Inc/: adc.h  beeper.h  main.h  morse.h  peripherical_Init.h  uart.h
src/Core/Src/: adc.c  beeper.c  main.c  morse.c  peripherical_Init.c  stm32f4xx_hal_msp.c  uart.c
src/Debug/: STM Sensors.list  STM Sensors.map  makefile  objects.list
src/Debug/Core/Src/: main.cyclo  main.d  main.su  morse.d  subdir.mk
